# main.py
@@ -1,9 +1,13 @@
+# -*- coding: utf-8 -*-
 from flask import Flask, render_template, request, redirect, url_for, jsonify
 from flask_cors import CORS
 from werkzeug.utils import secure_filename
 from application_semantic_search_open_corpus import runAnalysis, addQueries
 from application_semantic_search import runSample
+from application_semantic_search_ko import runSampleKo
+from application_semantic_search_open_corpus_ko import runAnalysisKo, addQueriesKo
 app = Flask(__name__)
+app.config['JSON_AS_ASCII'] = False
 CORS(app)
 
 
@@ -17,14 +21,29 @@ def render_file():
 def initial_check():
     check_value = request.form['checkValue']
     if check_value == "0":
-        return redirect(url_for('sample_run'))
+        return render_template('check_ko_eng.html')
     elif check_value == "1":
         return render_template('upload.html')
+
+
+@app.route('/check_ko_eng', methods=['GET', 'POST'])
+def check_ko_eng():
+    check_value = request.form['checkValue']
+    if check_value == "0":
+        return redirect(url_for('sample_run'))
+    elif check_value == "1":
+        return redirect(url_for('sample_ko'))
 
 
 @app.route('/sample', methods=['GET', 'POST'])
 def sample_run():
     sample_result = runSample()
+    return jsonify(sample_result)
+
+
+@app.route('/sample_ko', methods=['GET', 'POST'])
+def sample_ko():
+    sample_result = runSampleKo()
     return jsonify(sample_result)
 
 
@@ -52,8 +71,14 @@ def change_query():
     for i in range(1):
         split_input_value = input_value[i].split(",")
     split_input_value = [line.strip() for line in split_input_value]
-    addQueries(split_input_value)
-    return redirect(url_for('run_file'))
+
+    check_value = request.form['check_language']
+    if check_value == "en":
+        addQueries(split_input_value)
+        return redirect(url_for('run_file'))
+    elif check_value == "ko":
+        addQueriesKo(split_input_value)
+        return redirect(url_for('run_ko_file'))
 
 
 @app.route('/runfile', methods=['GET', 'POST'])
@@ -62,11 +87,24 @@ def run_file():
     return jsonify(result)
 
 
+@app.route('/run_ko_file', methods=['GET', 'post'])
+def run_ko_file():
+    result = runAnalysisKo()
+    return jsonify(result)
+
+
 @app.route('/upload_your_sample', methods=['GET', 'POST'])
 def upload_your_sample():
     upload_file()
     change_query()
     return run_file()
+
+
+@app.route('/upload_your_sample_ko', methods=['GET', 'POST'])
+def upload_your_sample_ko():
+    upload_file()
+    change_query()
+    return run_ko_file()
 
 
 if __name__ == '__main__':
